--- a/Project/DirectXGame.vcxproj.filters
+++ b/Project/DirectXGame.vcxproj.filters
@@ -539,9 +539,6 @@
     <ClCompile Include="Engine\Effect\Particle\Core\ParticleRenderer.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\Effect\Particle\ParticleEffect.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="Engine\Effect\Particle\Core\GPUParticleUpdater.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
@@ -560,10 +557,13 @@
     <ClCompile Include="Engine\Effect\Trail\Core\GPUTrailEffectUpdater.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\Effect\Trail\TrailEffect.cpp">
+    <ClCompile Include="Engine\Effect\GameEffect.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\Effect\GameEffect.cpp">
+    <ClCompile Include="Engine\Effect\Particle\ParticleSystem.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\Effect\Particle\Data\ParticleParameter.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -762,7 +762,6 @@
     <ClInclude Include="Engine\Core\Graphics\GPUObject\IndexBuffer.h" />
     <ClInclude Include="Engine\Effect\Particle\Core\ParticleManager.h" />
     <ClInclude Include="Engine\Effect\Particle\Core\ParticleRenderer.h" />
-    <ClInclude Include="Engine\Effect\Particle\ParticleEffect.h" />
     <ClInclude Include="Engine\Effect\Particle\Structures\ParticlePrimitiveStructures.h" />
     <ClInclude Include="Engine\Effect\Particle\Core\GPUParticleUpdater.h" />
     <ClInclude Include="Engine\Effect\Particle\Structures\ParticleEmitterStructures.h" />
@@ -772,11 +771,12 @@
     <ClInclude Include="Engine\Effect\Trail\Structures\TrailEffectStructures.h" />
     <ClInclude Include="Engine\Effect\Trail\Core\TrailEffectRenderer.h" />
     <ClInclude Include="Engine\Effect\Trail\Core\GPUTrailEffectUpdater.h" />
-    <ClInclude Include="Engine\Effect\Trail\TrailEffect.h" />
     <ClInclude Include="Engine\Effect\GameEffect.h" />
     <ClInclude Include="Engine\Effect\Particle\ParticleConfig.h" />
     <ClInclude Include="Lib\Adapter\EnumAdapter.h" />
     <ClInclude Include="Engine\Effect\Particle\Structures\ParticleStructures.h" />
+    <ClInclude Include="Engine\Effect\Particle\ParticleSystem.h" />
+    <ClInclude Include="Engine\Effect\Particle\Data\ParticleParameter.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Engine\Shaders\PostProcess\Copy\CopyTexture.CS.hlsl" />
@@ -792,7 +792,7 @@
     <FxCompile Include="Assets\Engine\Shaders\Raytracing\ShadowRayQuery.hlsl" />
     <FxCompile Include="Assets\Engine\Shaders\Standard\PS\MeshStandard.PS.hlsl" />
     <FxCompile Include="Assets\Engine\Shaders\PostProcess\Lut\Lut.CS.hlsl" />
-    <FxCompile Include="Assets\Engine\Shaders\GPUParticle\PS\Particle.PS.hlsl" />
+    <FxCompile Include="Assets\Engine\Shaders\GPUParticle\PS\GPUParticle.PS.hlsl" />
     <FxCompile Include="Assets\Engine\Shaders\GPUParticle\CS\Init\InitParticle.CS.hlsl" />
     <FxCompile Include="Assets\Engine\Shaders\VS_PS\Particle\VertexEffect.VS.hlsl" />
     <FxCompile Include="Assets\Engine\Shaders\GPUParticle\Primitive\PlaneParticle.MS.hlsl" />
@@ -802,6 +802,7 @@
     <FxCompile Include="Assets\Engine\Shaders\GPUParticle\CS\Emit\EmitBoxParticle.CS.hlsl" />
     <FxCompile Include="Assets\Engine\Shaders\GPUParticle\CS\Emit\EmitConeParticle.CS.hlsl" />
     <FxCompile Include="Assets\Engine\Shaders\GPUParticle\CS\Emit\EmitMeshParticle.CS.hlsl" />
+    <FxCompile Include="Assets\Engine\Shaders\CPUParticle\PS\CPUParticle.PS.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Engine\Shaders\Standard\StandardMSFunction.hlsli" />
